WEEK 3/May 20/output.txt
Enter the task you want the agents to work on: function to check a given year is a leap year or not
User (to chat_manager):

function to check a given year is a leap year or not

--------------------------------------------------------------------------------
[Coder] Generating code...
Coder (to chat_manager):

Code:
Several versions are provided below, each with slightly different characteristics:

**Version 1:  Concise and Efficient**

This version uses a single expression leveraging the modulo operator and boolean logic for maximum efficiency.

```python
def is_leap(year):
  """Checks if a given year is a leap year.

  Args:
    year: The year to check (integer).

  Returns:
    True if the year is a leap year, False otherwise.
  """
  return (year % 4 == 0 and year % 100 != 0) or year % 400 == 0

#Example usage
print(is_leap(2024))  # True
print(is_leap(2023))  # False
print(is_leap(2000))  # True
print(is_leap(1900))  # False

```

**Version 2:  More Readable (with comments)**

This version breaks down the leap year rules into separate lines for improved readability.

```python
def is_leap_readable(year):
  """Checks if a given year is a leap year (more readable version)."""
  if year % 4 != 0:  #Not divisible by 4, definitely not a leap year
    return False
  elif year % 100 == 0: #Divisible by 100, check for divisibility by 400
    return year % 400 == 0
  else: #Divisible by 4 but not by 100, it's a leap year
    return True

#Example usage
print(is_leap_readable(2024))  # True
print(is_leap_readable(2023))  # False
print(is_leap_readable(2000))  # True
print(is_leap_readable(1900))  # False
```

**Version 3:  Handling Non-Integer Input (Robust)**

This version adds error handling to manage cases where the input is not an integer.

```python
def is_leap_robust(year):
  """Checks if a given year is a leap year (handles non-integer input)."""
  try:
    year = int(year) #Try converting to an integer.  This will raise ValueError if it's not possible
    return (year % 4 == 0 and year % 100 != 0) or year % 400 == 0
  except ValueError:
    return "Invalid input: Year must be an integer."

#Example usage
print(is_leap_robust(2024))  # True
print(is_leap_robust(2023))  # False
print(is_leap_robust(2000))  # True
print(is_leap_robust(1900))  # False
print(is_leap_robust("abc")) # Invalid input: Year must be an integer.

```

Choose the version that best suits your needs.  Version 1 is generally preferred for its conciseness and efficiency, while Version 3 is more robust if you anticipate potentially 
invalid input.  Version 2 offers a good compromise between readability and conciseness.


Execution Result:
File "C:\Users\sahee\AppData\Local\Temp\tmpl24tpkzm.py", line 1
    Several versions are provided below, each with slightly different characteristics:
            ^^^^^^^^
SyntaxError: invalid syntax

--------------------------------------------------------------------------------
[Debugger] Linting and debugging code...
Debugger (to chat_manager):

Found some issues via linting:
************* Module tmp0ljhzxp3
C:\Users\sahee\AppData\Local\Temp\tmp0ljhzxp3.py:1:9: E0001: Parsing failed: 'invalid syntax (tmp0ljhzxp3, line 1)' (syntax-error)

Please fix them.

--------------------------------------------------------------------------------

>>>>>>>> EXECUTING CODE BLOCK 0 (inferred language is python)...

>>>>>>>> EXECUTING CODE BLOCK 1 (inferred language is python)...

>>>>>>>> EXECUTING CODE BLOCK 2 (inferred language is python)...
User (to chat_manager):

exitcode: 0 (execution succeeded)
Code output:
True
False
True
False

True
False
True
False

True
False
True
False
Invalid input: Year must be an integer.


--------------------------------------------------------------------------------
[Coder] Generating code...
Coder (to chat_manager):

Code:
def is_leap(year):
    """Checks if a year is a leap year."""
    try:
        year = int(year)
        if year % 4 != 0:
            return False
        elif year % 100 == 0:
            if year % 400 == 0:
                return True
            else:
                return False
        else:
            return True
    except ValueError:
        return "Invalid input: Year must be an integer."


# Test cases
print(is_leap(2024))
print(is_leap(2023))
print(is_leap(2000))
print(is_leap(1900))

print(is_leap(2028))
print(is_leap(2027))
print(is_leap(2400))
print(is_leap(2100))


print(is_leap(2020))
print(is_leap(2019))
print(is_leap(2004))
print(is_leap(2100))
print(is_leap("abc"))


Execution Result:
True
False
True
False
True
False
True
False
True
False
True
False
True
False
True
False
True
False
True
True
False
True
False
True
False
True
False
True
False
True
False
True
False
False
True
False
True
False
True
False
False
Invalid input: Year must be an integer.


--------------------------------------------------------------------------------
--------------------------------------------------------------------------------
[Debugger] Linting and debugging code...
[Debugger] Linting and debugging code...
Debugger (to chat_manager):

Code looks good! Task completed successfully.

--------------------------------------------------------------------------------

>>>>>>>> TERMINATING RUN (fe23bb2e-7a6a-4fa2-b07a-15fb303a9daa): Maximum number of consecutive auto-replies reached

>>>>>>>> TERMINATING RUN (316a5eab-0564-4f07-a555-7903b5b240ae): No reply generated
Conversation completed successfully!